--- a/css/pricing.css
+++ b/css/pricing.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-  background-image: url('bg-2.jpg');
+  background-image: url('images/bg-2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
