--- a/css/index.css
+++ b/css/index.css
@@ -26,10 +26,10 @@
     }
  
   body {
-    background-image: url('bg-2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+    background-image: url('images/bg-2.jpg') !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
   }
 
    #KayaIN {
